fixed content-visibility

--- a/Contact Info/contact_info.css
+++ b/Contact Info/contact_info.css
@@ -91,11 +91,16 @@ ul li a:hover{
 }
 
 .content{
+    background-color: #f5c6cf64;
     position: absolute;
     top: 100vh;
-    margin-left: 5%;
-    margin-right: 5% ;
+    left: 0%;
+    right: 0% ;
     font-size: 20px;
+}
+.content_text{
+    position: relative;
+    margin: 5%;
 }
 
 @media only screen and (max-width:900px) {
